migrated nuxt code

--- a/package.json
+++ b/package.json
@@ -15,9 +15,18 @@
     "@tauri-apps/cli": "^1.5.5",
     "nuxt": "^3.11.2",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "@element-plus/nuxt": "^1.0.9",
+    "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
+    "@vueuse/core": "^10.9.0",
+    "@vueuse/nuxt": "^10.9.0",
+    "element-plus": "2.7.2"
   },
   "dependencies": {
-    "@tauri-apps/api": "^1.5.1"
+    "@tauri-apps/api": "^1.5.1",
+    "@element-plus/icons-vue": "^2.3.1",
+    "@nuxt/ui": "^2.15.2",
+    "@pinia/nuxt": "^0.5.1",
+    "zod": "^3.22.4"
   }
 }
