--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
-    "@tauri-apps/cli": "^1.5.5",
     "nuxt": "^3.11.2",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
@@ -23,10 +22,11 @@
     "element-plus": "2.7.2"
   },
   "dependencies": {
-    "@tauri-apps/api": "^1.5.1",
     "@element-plus/icons-vue": "^2.3.1",
     "@nuxt/ui": "^2.15.2",
     "@pinia/nuxt": "^0.5.1",
+    "@tauri-apps/api": "^1.5.1",
+    "@tauri-apps/plugin-sql": "^2.0.0-beta.3",
     "zod": "^3.22.4"
   }
 }
