--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "@element-plus/icons-vue": "^2.3.1",
     "@nuxt/ui": "^2.15.2",
     "@pinia/nuxt": "^0.5.1",
-    "@tauri-apps/api": "^1.5.1",
+    "@tauri-apps/api": ">=2.0.0-beta.0",
+    "@tauri-apps/plugin-shell": ">=2.0.0-beta.0",
     "@tauri-apps/plugin-sql": "^2.0.0-beta.3",
     "zod": "^3.22.4"
   }
